--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -2,7 +2,7 @@
   <div id="line"></div>
   <div class="item left">
     2017 - 2018
-    <h3>Frontend Developer</h3>
+    <h3>Job Title</h3>
     <p>Company Name</p>
     <p>Location</p>
     <p>
@@ -14,7 +14,7 @@
   </div>
   <div class="item right">
     2018 - 2019
-    <h3>Frontend Developer</h3>
+    <h3>Job Title</h3>
     <p>Company Name</p>
     <p>Location</p>
     <p>
@@ -26,7 +26,7 @@
   </div>
   <div class="item left">
     2019 - 2020
-    <h3>Frontend Developer</h3>
+    <h3>Job Title</h3>
     <p>Company Name</p>
     <p>Location</p>
     <p>
@@ -38,7 +38,7 @@
   </div>
   <div class="item right">
     2020 - 2021
-    <h3>Frontend Developer</h3>
+    <h3>Job Title</h3>
     <p>Company Name</p>
     <p>Location</p>
     <p>
@@ -50,7 +50,7 @@
   </div>
   <div class="item left">
     2021 - 2022
-    <h3>Frontend Developer</h3>
+    <h3>Job Title</h3>
     <p>Company Name</p>
     <p>Location</p>
     <p>
@@ -62,7 +62,7 @@
   </div>
   <div class="item right">
     2022 - 2023
-    <h3>Frontend Developer</h3>
+    <h3>Job Title</h3>
     <p>Company Name</p>
     <p>Location</p>
     <p>
