--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -81,6 +81,7 @@
     gap: 3rem;
     justify-content: center;
     margin: 3rem auto;
+    overflow-x: hidden;
   }
   #line {
     background-color: burlywood;
@@ -102,6 +103,12 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     flex-grow: 1; /* This item will take up remaining space */
     max-width: 250px;
+    transition: max-width 0.5s ease-in-out;
+  }
+  @media (max-width: 600px) {
+    .item {
+      max-width: 150px;
+    }
   }
   .item.left {
     flex-grow: 0; /* This item will only take up its content width */
@@ -154,7 +161,7 @@
         trigger: right,
         start: "top 100%",
         end: "bottom bottom",
-        toggleActions: "restart none none none", // Restart the animation when the trigger enters the viewport
+        scrub: 1,
       },
       x: 100,
       opacity: 0,
@@ -167,7 +174,7 @@
         trigger: left,
         start: "top 100%",
         end: "bottom bottom",
-        toggleActions: "restart none none none", // Restart the animation when the trigger enters the viewport
+        scrub: 1,
       },
       x: -100,
       opacity: 0,
