--- a/src/components/TeachingGoals.astro
+++ b/src/components/TeachingGoals.astro
@@ -69,6 +69,7 @@
     font-size: 1.5rem;
     font-style: italic;
     /* margin-bottom: 1rem; */
+    color: #97938f;
   }
   blockquote span {
     display: block;
