Update links in education and portfolio pages to open in new tabs and fixed Yahtzee link

--- a/src/pages/work/education.astro
+++ b/src/pages/work/education.astro
@@ -6,13 +6,18 @@ import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
   <nav>
     <ul>
       <li>
-        <a href="https://danielsegarra.dev/LemonPianoPillow/"
+        <a
+          href="https://danielsegarra.dev/LemonPianoPillow/"
+          target="_blank"
+          rel="noopener noreferrer"
           ><mark>Celebrating Student Accoplishments</mark></a
         >
       </li>
       <li>
-        <a href="https://danielsegarra.dev/dreamy-compactor-slurp/"
-          ><mark>Start Learning TODAY!</mark></a
+        <a
+          href="https://danielsegarra.dev/dreamy-compactor-slurp/"
+          target="_blank"
+          rel="noopener noreferrer"><mark>Start Learning TODAY!</mark></a
         >
       </li>
     </ul>
