--- a/src/pages/work/portfolio.astro
+++ b/src/pages/work/portfolio.astro
@@ -45,7 +45,7 @@ let pd = "50px";
         title_line_1=""
         title_line_2="Yahtzee"
         description="Digitizing a classic handheld experience"
-        link="http://danielsegarra.dev/yahtzee"
+        link="http://danielsegarra.dev/Yahtzee"
         button_text="play now"
       />
     </div>
@@ -83,13 +83,22 @@ let pd = "50px";
   </div>
   <div class="other_work">
     <h2>Other Work</h2>
-    <a href="#">stuff im working on now</a>
-    <a href="#">miscellaneous work</a>
-    <a href="#">single-page mockups</a>
-    <a href="https://danielsegarra.dev/throwingAxeMenuAnimation"
-      >throwingAxeMenuAnimation</a
+    <a href="#" target="_blank" rel="noopener noreferrer"
+      >stuff im working on now</a
     >
-    <a href="https://danielsegarra.dev/CFFG2PB">CFFG2PB</a>
+    <a href="#" target="_blank" rel="noopener noreferrer">miscellaneous work</a>
+    <a href="#" target="_blank" rel="noopener noreferrer">single-page mockups</a
+    >
+    <a
+      href="https://danielsegarra.dev/throwingAxeMenuAnimation"
+      target="_blank"
+      rel="noopener noreferrer">throwingAxeMenuAnimation</a
+    >
+    <a
+      href="https://danielsegarra.dev/CFFG2PB"
+      target="_blank"
+      rel="noopener noreferrer">CFFG2PB</a
+    >
   </div>
 </ScrollLayout>
 
