--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,5 +1,4 @@
 <div id="timeline">
-  <div id="line"></div>
   <div class="item left">
     2017 - 2018
     <h3>Job Title</h3>
@@ -72,6 +71,8 @@
       nobis illum!
     </p>
   </div>
+  <!-- keep at bottom to preserve even/odd formatting -->
+  <div id="line"></div>
 </div>
 <style>
   #timeline {
@@ -110,13 +111,15 @@
       max-width: 150px;
     }
   }
-  .item.left {
+  .item.left,
+  .item:nth-of-type(odd) {
     flex-grow: 0; /* This item will only take up its content width */
     width: 50%; /* Set the width to 50% */
     margin-right: 52%; /* Push it to the right */
     margin-left: auto; /* Push it to the right */
   }
-  .item.right {
+  .item.right,
+  .item:nth-of-type(even) {
     flex-grow: 0; /* This item will only take up its content width */
     width: 50%; /* Set the width to 50% */
     margin-left: 52%; /* Push it to the right */
@@ -153,6 +156,18 @@
 ></script>
 <script>
   gsap.registerPlugin(ScrollTrigger);
+
+  // fade in line
+  gsap.from("#line", {
+    scrollTrigger: {
+      trigger: "#line",
+      start: "top 100%",
+      end: "bottom bottom",
+      toggleActions: "restart none none none",
+    },
+    opacity: 0,
+    duration: 1,
+  });
 
   // GSAP fade in all .right items from right
   gsap.utils.toArray(".right").forEach((right) => {
