Refactor WorkTimeline component layout and styling, added tab navigation to timeline items, added classes and ids to directly target item props if needed, aligned text in right aligned items to also be aligned to the right.

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,70 +1,70 @@
 <div id="timeline">
-  <div class="item left">
-    2017 - 2018
-    <h3>Job Title</h3>
-    <p>Company Name</p>
-    <p>Location</p>
-    <p>
+  <div tabindex="0" class="item left">
+    <span class="year">2017 - 2018</span>
+    <h3 class="job-title">Job Title</h3>
+    <p class="company">Company Name</p>
+    <p class="location">Location</p>
+    <p class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
       nobis illum!
     </p>
   </div>
-  <div class="item right">
-    2018 - 2019
-    <h3>Job Title</h3>
-    <p>Company Name</p>
-    <p>Location</p>
-    <p>
+  <div tabindex="0" class="item right">
+    <span class="year">2018 - 2019</span>
+    <h3 class="job-title">Job Title</h3>
+    <p class="company">Company Name</p>
+    <p class="location">Location</p>
+    <p class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
       nobis illum!
     </p>
   </div>
-  <div class="item left">
-    2019 - 2020
-    <h3>Job Title</h3>
-    <p>Company Name</p>
-    <p>Location</p>
-    <p>
+  <div tabindex="0" class="item left">
+    <span class="year">2019 - 2020</span>
+    <h3 class="job-title">Job Title</h3>
+    <p class="company">Company Name</p>
+    <p class="location">Location</p>
+    <p class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
       nobis illum!
     </p>
   </div>
-  <div class="item right">
-    2020 - 2021
-    <h3>Job Title</h3>
-    <p>Company Name</p>
-    <p>Location</p>
-    <p>
+  <div tabindex="0" class="item right">
+    <span class="year">2020 - 2021</span>
+    <h3 class="job-title">Job Title</h3>
+    <p class="company">Company Name</p>
+    <p class="location">Location</p>
+    <p class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
       nobis illum!
     </p>
   </div>
-  <div class="item left">
-    2021 - 2022
-    <h3>Job Title</h3>
-    <p>Company Name</p>
-    <p>Location</p>
-    <p>
+  <div tabindex="0" class="item left">
+    <span class="year">2021 - 2022</span>
+    <h3 class="job-title">Job Title</h3>
+    <p class="company">Company Name</p>
+    <p class="location">Location</p>
+    <p class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
       nobis illum!
     </p>
   </div>
-  <div class="item right">
-    2022 - 2023
-    <h3>Job Title</h3>
-    <p>Company Name</p>
-    <p>Location</p>
-    <p>
+  <div tabindex="0" class="item right">
+    <span class="year">2022 - 2023</span>
+    <h3 class="job-title">Job Title</h3>
+    <p class="company">Company Name</p>
+    <p class="location">Location</p>
+    <p class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
@@ -110,6 +110,9 @@
     .item {
       max-width: 150px;
     }
+  }
+  .item.right {
+    text-align: right;
   }
   .item.left,
   .item:nth-of-type(odd) {
