Update WorkTimeline component

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,80 +1,135 @@
 <div id="timeline">
-  <div tabindex="0" class="item left">
-    <span class="year">2017 - 2018</span>
-    <h3 class="job-title">Job Title</h3>
-    <p class="company">Company Name</p>
-    <p class="location">Location</p>
+  <!-- <div tabindex="0" class="item">
+    <span class="year">2012 - 2016</span>
+    <h3 class="job-title">Secretary</h3>
+    <p class="company">Divine Mercy Parish</p>
+    <p class="location">Brooklyn, NY</p>
     <p class="description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
-      eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
-      provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
-      nobis illum!
+      <ul>
+        <li>
+          Translated membership paperwork to ~20 Spanish-speaking members from
+          Spanish to English
+        </li>
+        <li>Managed the budget for 6 events within the Parish</li>
+      </ul>
+    </p>
+  </div> -->
+  <div tabindex="0" class="item">
+    <span class="year">2011 - 2017</span>
+    <h3 class="job-title">Deckhand</h3>
+    <p class="company">Metro Marine Inc.</p>
+    <p class="location">Bronx, NY</p>
+    <p class="description">
+      <ul>
+        <li class="ressponsibilities">
+          Contracted by the DOT as maritime transport, workspace, and emergency
+          response for routine maintenance under bridges.
+        </li>
+        <li class="ressponsibilities">
+          Delegated tasks to work crew, maintained strict safety conditions for
+          on-site work barges, and facilitated communication between DOT Bridge
+          & Tunnel inspectors and barge crew & captains.
+        </li>
+      </ul>
     </p>
   </div>
-  <div tabindex="0" class="item right">
-    <span class="year">2018 - 2019</span>
-    <h3 class="job-title">Job Title</h3>
-    <p class="company">Company Name</p>
-    <p class="location">Location</p>
+  <div tabindex="0" class="item">
+    <span class="year">2017 - 2019</span>
+    <h3 class="job-title">Computer Aide</h3>
+    <p class="company">Consolidated Edison</p>
+    <p class="location">Bronx, NY</p>
     <p class="description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
-      eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
-      provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
-      nobis illum!
+      <ul>
+        <li>
+          Managed large datasets of company and client information, regarding
+          daily operations and on-site visits, in the Bronx, Manhattan, Queens,
+          and Westchester.
+        </li>
+        <li>
+          Automated orders and pick-up notifications for natural gas regulators
+          to be installed at a client's property by company personnel.
+        </li>
+      </ul>
     </p>
   </div>
-  <div tabindex="0" class="item left">
-    <span class="year">2019 - 2020</span>
-    <h3 class="job-title">Job Title</h3>
-    <p class="company">Company Name</p>
-    <p class="location">Location</p>
+  <div tabindex="0" class="item">
+    <span class="year">Summer 2020</span>
+    <h3 class="job-title">Technical Instructor</h3>
+    <p class="company">Change Food for Good</p>
+    <p class="location">Remote (NY)</p>
     <p class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
       nobis illum!
+      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
     </p>
   </div>
-  <div tabindex="0" class="item right">
-    <span class="year">2020 - 2021</span>
-    <h3 class="job-title">Job Title</h3>
-    <p class="company">Company Name</p>
-    <p class="location">Location</p>
+  <div tabindex="0" class="item">
+    <span class="year">Q2-Q4 2021</span>
+    <h3 class="job-title">Fullstack Engineer</h3>
+    <p class="company">Change Food for Good</p>
+    <p class="location">Remote (NY)</p>
+    <p class="description">Lorem</p>
+  </div>
+  <div tabindex="0" class="item">
+    <span class="year">Spring 2022</span>
+    <h3 class="job-title">Technical Instructor</h3>
+    <p class="company">Change Food for Good</p>
+    <p class="location">Remote (NY)</p>
     <p class="description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
-      eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
-      provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
-      nobis illum!
+      lorem
+      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
     </p>
   </div>
-  <div tabindex="0" class="item left">
-    <span class="year">2021 - 2022</span>
-    <h3 class="job-title">Job Title</h3>
-    <p class="company">Company Name</p>
-    <p class="location">Location</p>
+  <div tabindex="0" class="item">
+    <span class="year">Spring 2023</span>
+    <h3 class="job-title">Technical Instructor</h3>
+    <p class="company">Change Food for Good</p>
+    <p class="location">Remote (NY)</p>
     <p class="description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
-      eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
-      provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
-      nobis illum!
+      <p>
+        Change Food for Good is a non-profit organization that provides
+        technology education to underserved communities in New York City. I
+        taught a 6-week web development course to high school students in the
+        Columbia University DDC program.
+      </p>
+      <p>
+        I taught students how to build a website using HTML, CSS, and JavaScript
+        and how to deploy their website using GitHub Pages. I also taught them
+        how to use the command line, Git, and GitHub.
+      </p>
+      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
     </p>
   </div>
-  <div tabindex="0" class="item right">
-    <span class="year">2022 - 2023</span>
-    <h3 class="job-title">Job Title</h3>
-    <p class="company">Company Name</p>
-    <p class="location">Location</p>
+  <div tabindex="0" class="item">
+    <span class="year">Summer 2023</span>
+    <h3 class="job-title">Technical Instructor</h3>
+    <p class="company">The Knowledge House</p>
+    <p class="location">Columbia University</p>
+    <!-- Columbia DDC program description-->
     <p class="description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
-      eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
-      provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
-      nobis illum!
+      <p>
+        The Knowledge House is a non-profit organization that provides
+        technology education to underserved communities in New York City. I
+        taught a 6-week web development course to high school students in the
+        Columbia University DDC program.
+      </p>
+      <p>
+        I taught students how to build a website using HTML, CSS, and JavaScript
+        and how to deploy their website using GitHub Pages. I also taught them
+        how to use the command line, Git, and GitHub.
+      </p>
+      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
     </p>
   </div>
   <!-- keep at bottom to preserve even/odd formatting -->
   <div id="line"></div>
 </div>
 <style>
+  #three-years {
+    margin-bottom: 30rem;
+  }
   #timeline {
     position: relative;
     display: flex;
@@ -111,7 +166,8 @@
       max-width: 150px;
     }
   }
-  .item.right {
+  .item.right,
+  .item:nth-of-type(even) {
     text-align: right;
   }
   .item.left,
@@ -127,7 +183,8 @@
     width: 50%; /* Set the width to 50% */
     margin-left: 52%; /* Push it to the right */
   }
-  .item.left::after {
+  .item.left::after,
+  .item:nth-of-type(odd)::after {
     content: ""; /* Create the pseudo-element */
     position: absolute;
     top: 50%; /* Position it vertically in the middle */
@@ -138,7 +195,8 @@
     border-bottom: 10px solid transparent;
     border-left: 10px solid azure; /* Color of the callout arrow */
   }
-  .item.right::before {
+  .item.right::before,
+  .item:nth-of-type(even)::before {
     content: ""; /* Create the pseudo-element */
     position: absolute;
     top: 50%; /* Position it vertically in the middle */
@@ -148,6 +206,9 @@
     border-top: 10px solid transparent;
     border-bottom: 10px solid transparent;
     border-right: 10px solid azure; /* Color of the callout arrow */
+  }
+  ul {
+    list-style: none;
   }
 </style>
 <script
@@ -173,7 +234,7 @@
   });
 
   // GSAP fade in all .right items from right
-  gsap.utils.toArray(".right").forEach((right) => {
+  gsap.utils.toArray(".item:nth-of-type(even)").forEach((right) => {
     gsap.from(right, {
       scrollTrigger: {
         trigger: right,
@@ -186,7 +247,7 @@
       duration: 1,
     });
   });
-  gsap.utils.toArray(".left").forEach((left) => {
+  gsap.utils.toArray(".item:nth-of-type(odd)").forEach((left) => {
     gsap.from(left, {
       scrollTrigger: {
         trigger: left,
