Update description elements in WorkTimeline component to be divs with paragraphs. gave them some vertical space as well

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -4,7 +4,7 @@
     <h3 class="job-title">Secretary</h3>
     <p class="company">Divine Mercy Parish</p>
     <p class="location">Brooklyn, NY</p>
-    <p class="description">
+    <div class="description">
       <ul>
         <li>
           Translated membership paperwork to ~20 Spanish-speaking members from
@@ -19,7 +19,7 @@
     <h3 class="job-title">Deckhand</h3>
     <p class="company">Metro Marine Inc.</p>
     <p class="location">Bronx, NY</p>
-    <p class="description">
+    <div class="description">
       <ul>
         <li class="ressponsibilities">
           Contracted by the DOT as maritime transport, workspace, and emergency
@@ -31,14 +31,14 @@
           & Tunnel inspectors and barge crew & captains.
         </li>
       </ul>
-    </p>
+    </div>
   </div>
   <div tabindex="0" class="item">
     <span class="year">2017 - 2019</span>
     <h3 class="job-title">Computer Aide</h3>
     <p class="company">Consolidated Edison</p>
     <p class="location">Bronx, NY</p>
-    <p class="description">
+    <div class="description">
       <ul>
         <li>
           Managed large datasets of company and client information, regarding
@@ -50,44 +50,44 @@
           to be installed at a client's property by company personnel.
         </li>
       </ul>
-    </p>
+    </div>
   </div>
   <div tabindex="0" class="item">
     <span class="year">Summer 2020</span>
     <h3 class="job-title">Technical Instructor</h3>
     <p class="company">Change Food for Good</p>
     <p class="location">Remote (NY)</p>
-    <p class="description">
+    <div class="description">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
       eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
       provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
       nobis illum!
       <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
-    </p>
+    </div>
   </div>
   <div tabindex="0" class="item">
     <span class="year">Q2-Q4 2021</span>
     <h3 class="job-title">Fullstack Engineer</h3>
     <p class="company">Change Food for Good</p>
     <p class="location">Remote (NY)</p>
-    <p class="description">Lorem</p>
+    <div class="description">Lorem</div>
   </div>
   <div tabindex="0" class="item">
     <span class="year">Spring 2022</span>
     <h3 class="job-title">Technical Instructor</h3>
     <p class="company">Change Food for Good</p>
     <p class="location">Remote (NY)</p>
-    <p class="description">
+    <div class="description">
       lorem
       <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
-    </p>
+    </div>
   </div>
   <div tabindex="0" class="item">
     <span class="year">Spring 2023</span>
     <h3 class="job-title">Technical Instructor</h3>
     <p class="company">Change Food for Good</p>
     <p class="location">Remote (NY)</p>
-    <p class="description">
+    <div class="description">
       <p>
         Change Food for Good is a non-profit organization that provides
         technology education to underserved communities in New York City. I
@@ -100,7 +100,7 @@
         how to use the command line, Git, and GitHub.
       </p>
       <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
-    </p>
+    </div>
   </div>
   <div tabindex="0" class="item">
     <span class="year">Summer 2023</span>
@@ -108,7 +108,7 @@
     <p class="company">The Knowledge House</p>
     <p class="location">Columbia University</p>
     <!-- Columbia DDC program description-->
-    <p class="description">
+    <div class="description">
       <p>
         The Knowledge House is a non-profit organization that provides
         technology education to underserved communities in New York City. I
@@ -121,7 +121,7 @@
         how to use the command line, Git, and GitHub.
       </p>
       <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
-    </p>
+    </div>
   </div>
   <!-- keep at bottom to preserve even/odd formatting -->
   <div id="line"></div>
@@ -209,6 +209,9 @@
   }
   ul {
     list-style: none;
+  }
+  .description {
+    margin-top: 1rem;
   }
 </style>
 <script
