Added background gradient to portfolio roll-over gallery section, looks nice

--- a/src/pages/work/portfolio.astro
+++ b/src/pages/work/portfolio.astro
@@ -140,6 +140,7 @@ let pd = "50px";
     padding: 0 20px;
     z-index: 1;
     display: flex;
+    background: linear-gradient(180deg, #000000 0%, #253237 100%);
   }
 
   .scroll_window {
