Add italic styling to year and location in WorkTimeline component

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -210,6 +210,13 @@
   ul {
     list-style: none;
   }
+
+  .year {
+    font-style: italic;
+  }
+  .location {
+    font-style: italic;
+  }
   .description {
     margin-top: 1rem;
   }
