--- a/src/components/TeachingGoals.astro
+++ b/src/components/TeachingGoals.astro
@@ -68,8 +68,9 @@
   blockquote {
     font-size: 1.5rem;
     font-style: italic;
-    /* margin-bottom: 1rem; */
-    color: #97938f;
+    margin-bottom: 1rem;
+    /* color: #97938f; */
+    color: #c7b59ea8;
   }
   blockquote span {
     display: block;
