--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -24,13 +24,13 @@
     <div class="description">
       <ul>
         <li class="responsibilities">
-          Contracted by the DOT as maritime transport, workspace, and emergency
-          response for routine maintenance under bridges.
+            Contracted by the DOT as maritime transport, workspace, and
+            emergency response for routine maintenance under bridges.
         </li>
         <li class="responsibilities">
-          Delegated tasks to work crew, maintained strict safety conditions for
-          on-site work barges, and facilitated communication between DOT Bridge
-          & Tunnel inspectors and barge crew & captains.
+            Delegated tasks to work crew, maintained strict safety conditions
+            for on-site work barges, and facilitated communication between DOT
+            Bridge & Tunnel inspectors and barge crew & captains.
         </li>
       </ul>
     </div>
@@ -44,12 +44,13 @@
       <ul>
         <li class="responsibilities">
           Managed large datasets of company and client information, regarding
-          daily operations and on-site visits, in the Bronx, Manhattan, Queens,
-          and Westchester.
+            daily operations and on-site visits, in the Bronx, Manhattan,
+            Queens, and Westchester.
         </li>
         <li class="responsibilities">
-          Automated orders and pick-up notifications for natural gas regulators
-          to be installed at a client's property by company personnel.
+            Automated orders and pick-up notifications for natural gas
+            regulators to be installed at a client's property by company
+            personnel.
         </li>
       </ul>
     </div>
@@ -94,13 +95,13 @@
         <li class="responsibilities">
           Change Food for Good is a non-profit organization that provides
           technology education to underserved communities in New York City. I
-          taught a 6-week web development course to high school students in the
-          Columbia University DDC program.
+            taught a 6-week web development course to high school students in
+            the Columbia University DDC program.
         </li>
         <li class="responsibilities">
           I taught students how to build a website using HTML, CSS, and
-          JavaScript and how to deploy their website using GitHub Pages. I also
-          taught them how to use the command line, Git, and GitHub.
+            JavaScript and how to deploy their website using GitHub Pages. I
+            also taught them how to use the command line, Git, and GitHub.
         </li>
       </ul>
       <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
@@ -117,13 +118,13 @@
         <li class="responsibilities">
           The Knowledge House is a non-profit organization that provides
           technology education to underserved communities in New York City. I
-          taught a 6-week web development course to high school students in the
-          Columbia University DDC program.
+            taught a 6-week web development course to high school students in
+            the Columbia University DDC program.
         </li>
         <li class="responsibilities">
           I taught students how to build a website using HTML, CSS, and
-          JavaScript and how to deploy their website using GitHub Pages. I also
-          taught them how to use the command line, Git, and GitHub.
+            JavaScript and how to deploy their website using GitHub Pages. I
+            also taught them how to use the command line, Git, and GitHub.
         </li>
       </ul>
       <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
