--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,133 +1,173 @@
 <div id="timeline">
-  <div tabindex="0" class="item">
-    <span class="year">2012 - 2016</span>
-    <h3 class="job-title">Secretary</h3>
-    <p class="company">Divine Mercy Parish</p>
-    <p class="location">Brooklyn, NY</p>
-    <div class="description">
-      <ul>
-        <li class="responsibilities">
-          Translated membership paperwork to ~20 Spanish-speaking members from
-          Spanish to English
-        </li>
-        <li class="responsibilities">
-          Managed the budget for 6 events within the Parish
-        </li>
-      </ul>
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">2012 - 2016</span>
+      <h3 class="job-title">Secretary</h3>
+      <p class="company">Divine Mercy Parish</p>
+      <p class="location">Brooklyn, NY</p>
+      <div class="description">
+        <ul>
+          <li class="responsibilities">
+            Translated membership paperwork to ~20 Spanish-speaking members from
+            Spanish to English
+          </li>
+          <li class="responsibilities">
+            Managed the budget for 6 events within the Parish
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
     </div>
   </div>
-  <div tabindex="0" class="item">
-    <span class="year">2011 - 2017</span>
-    <h3 class="job-title">Deckhand</h3>
-    <p class="company">Metro Marine Inc.</p>
-    <p class="location">Bronx, NY</p>
-    <div class="description">
-      <ul>
-        <li class="responsibilities">
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">2011 - 2017</span>
+      <h3 class="job-title">Deckhand</h3>
+      <p class="company">Metro Marine Inc.</p>
+      <p class="location">Bronx, NY</p>
+      <div class="description">
+        <ul>
+          <li class="responsibilities">
             Contracted by the DOT as maritime transport, workspace, and
             emergency response for routine maintenance under bridges.
-        </li>
-        <li class="responsibilities">
+          </li>
+          <li class="responsibilities">
             Delegated tasks to work crew, maintained strict safety conditions
             for on-site work barges, and facilitated communication between DOT
             Bridge & Tunnel inspectors and barge crew & captains.
-        </li>
-      </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
     </div>
   </div>
-  <div tabindex="0" class="item">
-    <span class="year">2017 - 2019</span>
-    <h3 class="job-title">Computer Aide</h3>
-    <p class="company">Consolidated Edison</p>
-    <p class="location">Bronx, NY</p>
-    <div class="description">
-      <ul>
-        <li class="responsibilities">
-          Managed large datasets of company and client information, regarding
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">2017 - 2019</span>
+      <h3 class="job-title">Computer Aide</h3>
+      <p class="company">Consolidated Edison</p>
+      <p class="location">Bronx, NY</p>
+      <div class="description">
+        <ul>
+          <li class="responsibilities">
+            Managed large datasets of company and client information, regarding
             daily operations and on-site visits, in the Bronx, Manhattan,
             Queens, and Westchester.
-        </li>
-        <li class="responsibilities">
+          </li>
+          <li class="responsibilities">
             Automated orders and pick-up notifications for natural gas
             regulators to be installed at a client's property by company
             personnel.
-        </li>
-      </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
     </div>
   </div>
-  <div tabindex="0" class="item">
-    <span class="year">Summer 2020</span>
-    <h3 class="job-title">Technical Instructor</h3>
-    <p class="company">Change Food for Good</p>
-    <p class="location">Remote (NY)</p>
-    <div class="description">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
-      eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
-      provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
-      nobis illum!
-      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">Summer 2020</span>
+      <h3 class="job-title">Technical Instructor</h3>
+      <p class="company">Change Food for Good</p>
+      <p class="location">Remote (NY)</p>
+      <div class="description">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos numquam
+        eligendi deleniti ipsa minus, vel perspiciatis, beatae voluptate et
+        provident, fugit odio repellendus hic facere laborum mollitia? Eligendi,
+        nobis illum!
+        <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+      </div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
     </div>
   </div>
-  <div tabindex="0" class="item">
-    <span class="year">Q2-Q4 2021</span>
-    <h3 class="job-title">Fullstack Engineer</h3>
-    <p class="company">Change Food for Good</p>
-    <p class="location">Remote (NY)</p>
-    <div class="description">Lorem</div>
-  </div>
-  <div tabindex="0" class="item">
-    <span class="year">Spring 2022</span>
-    <h3 class="job-title">Technical Instructor</h3>
-    <p class="company">Change Food for Good</p>
-    <p class="location">Remote (NY)</p>
-    <div class="description">
-      lorem
-      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">Q2-Q4 2021</span>
+      <h3 class="job-title">Fullstack Engineer</h3>
+      <p class="company">Change Food for Good</p>
+      <p class="location">Remote (NY)</p>
+      <div class="description">Lorem</div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
     </div>
   </div>
-  <div tabindex="0" class="item">
-    <span class="year">Spring 2023</span>
-    <h3 class="job-title">Technical Instructor</h3>
-    <p class="company">Change Food for Good</p>
-    <p class="location">Remote (NY)</p>
-    <div class="description">
-      <ul>
-        <li class="responsibilities">
-          Change Food for Good is a non-profit organization that provides
-          technology education to underserved communities in New York City. I
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">Spring 2022</span>
+      <h3 class="job-title">Technical Instructor</h3>
+      <p class="company">Change Food for Good</p>
+      <p class="location">Remote (NY)</p>
+      <div class="description">
+        lorem
+        <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+      </div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
+    </div>
+  </div>
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">Spring 2023</span>
+      <h3 class="job-title">Technical Instructor</h3>
+      <p class="company">Change Food for Good</p>
+      <p class="location">Remote (NY)</p>
+      <div class="description">
+        <ul>
+          <li class="responsibilities">
+            Change Food for Good is a non-profit organization that provides
+            technology education to underserved communities in New York City. I
             taught a 6-week web development course to high school students in
             the Columbia University DDC program.
-        </li>
-        <li class="responsibilities">
-          I taught students how to build a website using HTML, CSS, and
+          </li>
+          <li class="responsibilities">
+            I taught students how to build a website using HTML, CSS, and
             JavaScript and how to deploy their website using GitHub Pages. I
             also taught them how to use the command line, Git, and GitHub.
-        </li>
-      </ul>
-      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+          </li>
+        </ul>
+        <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+      </div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
     </div>
   </div>
-  <div tabindex="0" class="item">
-    <span class="year">Summer 2023</span>
-    <h3 class="job-title">Technical Instructor</h3>
-    <p class="company">The Knowledge House</p>
-    <p class="location">Columbia University</p>
-    <!-- Columbia DDC program description-->
-    <div class="description">
-      <ul>
-        <li class="responsibilities">
-          The Knowledge House is a non-profit organization that provides
-          technology education to underserved communities in New York City. I
+  <div class="item-container">
+    <div tabindex="0" class="item">
+      <span class="year">Summer 2023</span>
+      <h3 class="job-title">Technical Instructor</h3>
+      <p class="company">The Knowledge House</p>
+      <p class="location">Columbia University</p>
+      <!-- Columbia DDC program description-->
+      <div class="description">
+        <ul>
+          <li class="responsibilities">
+            The Knowledge House is a non-profit organization that provides
+            technology education to underserved communities in New York City. I
             taught a 6-week web development course to high school students in
             the Columbia University DDC program.
-        </li>
-        <li class="responsibilities">
-          I taught students how to build a website using HTML, CSS, and
+          </li>
+          <li class="responsibilities">
+            I taught students how to build a website using HTML, CSS, and
             JavaScript and how to deploy their website using GitHub Pages. I
             also taught them how to use the command line, Git, and GitHub.
-        </li>
-      </ul>
-      <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+          </li>
+        </ul>
+        <p>You can view their work <a href="#" target="_blank">HERE</a>!</p>
+      </div>
+    </div>
+    <div class="image">
+      <img src="https://source.unsplash.com/random/400×400/?fruit" />
     </div>
   </div>
   <!-- keep at bottom to preserve even/odd formatting -->
@@ -175,24 +215,24 @@
     }
   }
   .item.right,
-  .item:nth-of-type(even) {
+  .item-container:nth-of-type(even) .item {
     text-align: right;
   }
   .item.left,
-  .item:nth-of-type(odd) {
+  .item-container:nth-of-type(odd) .item {
     flex-grow: 0; /* This item will only take up its content width */
     width: 50%; /* Set the width to 50% */
     margin-right: 52%; /* Push it to the right */
     margin-left: auto; /* Push it to the right */
   }
   .item.right,
-  .item:nth-of-type(even) {
+  .item-container:nth-of-type(even) .item {
     flex-grow: 0; /* This item will only take up its content width */
     width: 48%; /* Set the width to 50% */
     margin-left: 52%; /* Push it to the right */
   }
   .item.left::after,
-  .item:nth-of-type(odd)::after {
+  .item-container:nth-of-type(odd) .item::after {
     content: ""; /* Create the pseudo-element */
     position: absolute;
     top: 50%; /* Position it vertically in the middle */
@@ -204,7 +244,7 @@
     border-left: 10px solid #ae9370; /* Color of the callout arrow */
   }
   .item.right::before,
-  .item:nth-of-type(even)::before {
+  .item-container:nth-of-type(even) .item::before {
     content: ""; /* Create the pseudo-element */
     position: absolute;
     top: 50%; /* Position it vertically in the middle */
@@ -262,7 +302,7 @@
   .item .description {
     color: #998974;
   }
-  .item:nth-of-type(odd) {
+  .item-container:nth-of-type(odd) .item {
     /* background-color: lightblue; */
     box-shadow: 15px 15px 10px -10px rgba(222, 184, 135, 0.772);
     /* box-shadow: 15px 15px 10px -10px #394549; */
@@ -277,7 +317,7 @@
     );
     color: azure;
   }
-  .item:nth-of-type(even) {
+  .item-container:nth-of-type(even) .item {
     /* background-color: #253237; */
     /* background with linear gradient smoothly transitioning from #253237 to black */
     /* background: linear-gradient(180deg, #253237 0%, #000000 100%); */
@@ -307,6 +347,42 @@
     box-shadow: -15px 15px 10px -10px rgba(222, 184, 135, 0.772);
     /* box-shadow: -15px 15px 10px -10px #394549; */
   }
+  .item-container {
+    position: relative;
+  }
+  /* .item-container .image {
+    height: 100%;
+    width: 48%;
+    position: absolute;
+    top: 0;
+    right: 0;
+  } */
+  /* pasted */
+  .item-container .image {
+    position: absolute;
+    height: 100%;
+    width: 48%;
+    top: 0;
+    display: flex;
+    /* display: none; */
+  }
+  .item-container:nth-of-type(even) .item + .image {
+    left: 0;
+    justify-content: flex-end;
+  }
+  .item-container:nth-of-type(odd) .item + .image {
+    right: 0;
+    justify-content: flex-start;
+  }
+  .image img {
+    height: 100%;
+    border-radius: 20px;
+    /* width: 100%; */
+    /* object-fit: cover; */
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
 </style>
 <script
   is:inline
@@ -331,20 +407,33 @@
   });
 
   // GSAP fade in all .right items from right
-  gsap.utils.toArray(".item:nth-of-type(even)").forEach((right) => {
-    gsap.from(right, {
-      scrollTrigger: {
-        trigger: right,
-        start: "top 100%",
-        end: "bottom bottom",
-        scrub: 1,
-      },
-      x: 100,
-      opacity: 0,
-      duration: 1,
+  gsap.utils
+    .toArray(".item-container:nth-of-type(even) > *")
+    .forEach((right) => {
+      gsap.from(right, {
+        scrollTrigger: {
+          trigger: right,
+          start: "top 100%",
+          end: "bottom bottom",
+          scrub: 1,
+        },
+        x: 100,
+        opacity: 0,
+        duration: 1,
+        stagger: 3,
+      });
+      gsap.from(right.querySelector("img"), 0.5, {
+        scrollTrigger: {
+          trigger: right,
+          start: "top 100%",
+          end: "bottom bottom",
+          scrub: 1,
+        },
+        rotation: 90,
+        transformOrigin: "right bottom",
+      });
     });
-  });
-  gsap.utils.toArray(".item:nth-of-type(odd)").forEach((left) => {
+  gsap.utils.toArray(".item-container:nth-of-type(odd) > *").forEach((left) => {
     gsap.from(left, {
       scrollTrigger: {
         trigger: left,
@@ -355,6 +444,25 @@
       x: -100,
       opacity: 0,
       duration: 1,
+      stagger: 3,
+    });
+    gsap.from(left.querySelector("img"), 0.5, {
+      scrollTrigger: {
+        trigger: left,
+        start: "top 100%",
+        end: "bottom bottom",
+        scrub: 1,
+      },
+      rotation: -90,
+      transformOrigin: "left bottom",
     });
   });
+  // const tl = new TimelineMax();
+
+  // tl.add(TweenMax.from(".event", 1, { x: -100, opacity: 0 })).add(
+  //   TweenMax.from(".image img", 0.5, {
+  //     rotation: -90,
+  //     transformOrigin: "left bottom",
+  //   })
+  // );
 </script>
