Update copyright year in FooterStamp component

--- a/src/components/FooterStamp.astro
+++ b/src/components/FooterStamp.astro
@@ -14,7 +14,7 @@ const currentYear = new Date().getFullYear();
   <!-- <div id="comment-container"></div> -->
   <FooterComments />
   <FooterBuildLinks />
-  <div class="copyright">&copy; {currentYear} Daniel Segarra Corps.</div>
+  <div class="copyright">&copy; 2019-{currentYear} Daniel Segarra Corps.</div>
 </div>
 
 <style is:inline>
@@ -23,6 +23,23 @@ const currentYear = new Date().getFullYear();
   }
   .copyright {
     color: #979797;
+    font-size: 11.25px;
+    /* color: rgb(180, 174, 164); */
+    color-scheme: dark;
+    font-family:
+      "system-ui",
+      -apple-system,
+      Open Sans,
+      Roboto,
+      Segoe UI Adjusted,
+      Segoe UI,
+      Liberation Sans,
+      Helvetica,
+      Arial,
+      sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.45px;
+    line-height: 22.5px;
   }
 </style>
 
