--- a/src/pages/work/education.astro
+++ b/src/pages/work/education.astro
@@ -25,6 +25,7 @@ import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
 </SinglePageLayout>
 
 <style>
+  @import url(https://fonts.googleapis.com/css?family=Exo+2:400,900,800,700,600,500,300,200,100);
   nav,
   ul,
   a {
@@ -150,6 +151,19 @@ import SinglePageLayout from "../../layouts/SinglePageLayout.astro";
   mark {
     padding: 0.5rem 1rem;
     background-color: white;
+    transition: all 2s ease;
+    /* font-weight: 300; */
+    font-family: "Exo 2", sans-serif;
+    font-weight: 100;
+    color: #2c3e50;
+
+    transition: font-weight 0.4s ease-in-out;
+  }
+  nav a:hover mark {
+    background-color: burlywood;
+    color: #253237;
+    font-weight: 900;
+    /* font-weight: bold; */
   }
 </style>
 
