--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -20,6 +20,7 @@ import ScrollLayout from "../../layouts/ScrollLayout.astro";
 </ScrollLayout>
 
 <style>
+  @import url(https://fonts.googleapis.com/css?family=Exo+2:400,900,800,700,600,500,300,200,100);
   #xp-nav,
   #xp-nav ul,
   #xp-nav ul li a {
@@ -142,12 +143,25 @@ import ScrollLayout from "../../layouts/ScrollLayout.astro";
   #xp-nav mark {
     padding: 0.5rem 1rem;
     background-color: white;
+    transition: all 2s ease;
+    /* font-weight: 300; */
+    font-family: "Exo 2", sans-serif;
+    font-weight: 100;
+    color: #2c3e50;
+
+    transition: font-weight 0.4s ease-in-out;
   }
 
   #xp-nav li:hover {
     z-index: 100;
     background-size: contain;
     background-repeat: no-repeat;
+  }
+  #xp-nav a:hover mark {
+    background-color: burlywood;
+    color: #253237;
+    font-weight: 900;
+    /* font-weight: bold; */
   }
 </style>
 <script
