--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -292,6 +292,7 @@
     /* max-height: 90svh;
     overflow-y: scroll;
     overflow-x: hidden; */
+    z-index: 2;
   }
 
   .item .year,
@@ -378,10 +379,11 @@
     height: 100%;
     border-radius: 20px;
     /* width: 100%; */
-    /* object-fit: cover; */
+    object-fit: cover;
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain;
+    /* object-fit: contain; */
+    z-index: 1;
   }
 </style>
 <script
@@ -422,13 +424,14 @@
         duration: 1,
         stagger: 3,
       });
-      gsap.from(right.querySelector("img"), 0.5, {
+      gsap.from(right.querySelector("img"), 30, {
         scrollTrigger: {
           trigger: right,
-          start: "top 100%",
+          start: "top 80%",
           end: "bottom bottom",
           scrub: 1,
         },
+        opacity: 0,
         rotation: 90,
         transformOrigin: "right bottom",
       });
@@ -446,13 +449,14 @@
       duration: 1,
       stagger: 3,
     });
-    gsap.from(left.querySelector("img"), 0.5, {
+    gsap.from(left.querySelector("img"), 30, {
       scrollTrigger: {
         trigger: left,
-        start: "top 100%",
+        start: "top 80%",
         end: "bottom bottom",
         scrub: 1,
       },
+      opacity: 0,
       rotation: -90,
       transformOrigin: "left bottom",
     });
