--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,7 +1,7 @@
 ---
 import barge from "../assets/barge.jpeg";
 import ddc from "../assets/DDC.jpg";
-import SC from "../assets/SC.png";
+// import SC from "../assets/SC.png";
 import SF01 from "../assets/SF01.png";
 import SF02 from "../assets/SF02.png";
 import SN from "../assets/SN.png";
@@ -40,7 +40,7 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
       <img src={SN.src} />
       <!-- <img src={SF01.src} /> -->
       <img src={SF02.src} />
-      <img src={SC.src} />
+      <!-- <img src={SC.src} /> -->
     </div>
   </div>
   <div class="item-container" id="metro-marine">
