--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -4,7 +4,7 @@ import ddc from "../assets/DDC.jpg";
 // import SC from "../assets/SC.png";
 // import SF01 from "../assets/SF01.png";
 // import SF02 from "../assets/SF02.png";
-// import SN from "../assets/SN.png";
+import SN from "../assets/SN.png";
 // import CFFG from "../assets/CFFG.jpg";
 // import NYCLogo from "../assets/NYCLogo.png";
 import CFFG from "./CFFGSVG.astro";
@@ -37,7 +37,7 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
     </div>
     <div class="image">
       <!-- <img src="https://source.unsplash.com/random/400×400/?office" /> -->
-      <!-- <img src={SN.src} /> -->
+      <img src={SN.src} />
       <!-- <img src={SF01.src} /> -->
       <!-- <img src={SF02.src} /> -->
       <!-- <img src={SC.src} /> -->
