images were save din all caps including extension i.e. NAME.PNG. astro must be case sensitive

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,9 +1,9 @@
 ---
 import barge from "../assets/barge.jpeg";
 import ddc from "../assets/DDC.jpg";
-// import SC from "../assets/SC.png";
+import SC from "../assets/SC.png";
 // import SF01 from "../assets/SF01.png";
-// import SF02 from "../assets/SF02.png";
+import SF02 from "../assets/SF02.png";
 import SN from "../assets/SN.png";
 // import CFFG from "../assets/CFFG.jpg";
 // import NYCLogo from "../assets/NYCLogo.png";
@@ -39,8 +39,8 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
       <!-- <img src="https://source.unsplash.com/random/400×400/?office" /> -->
       <img src={SN.src} />
       <!-- <img src={SF01.src} /> -->
-      <!-- <img src={SF02.src} /> -->
-      <!-- <img src={SC.src} /> -->
+      <img src={SF02.src} />
+      <img src={SC.src} />
     </div>
   </div>
   <div class="item-container" id="metro-marine">
