still not fixed trying more things

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -1,10 +1,10 @@
 ---
 import barge from "../assets/barge.jpeg";
 import ddc from "../assets/DDC.jpg";
-import SC from "../assets/SC.png";
+import dmpLocation1 from "../assets/dmpLocation1.png";
 // import SF01 from "../assets/SF01.png";
-import SF02 from "../assets/SF02.png";
-import SN from "../assets/SN.png";
+// import SF02 from "../assets/SF02.png";
+// import SN from "../assets/SN.png";
 // import CFFG from "../assets/CFFG.jpg";
 // import NYCLogo from "../assets/NYCLogo.png";
 import CFFG from "./CFFGSVG.astro";
@@ -37,10 +37,11 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
     </div>
     <div class="image">
       <!-- <img src="https://source.unsplash.com/random/400×400/?office" /> -->
-      <img src={SN.src} />
+      <!-- <img src={SN.src} /> -->
       <!-- <img src={SF01.src} /> -->
-      <img src={SF02.src} />
-      <img src={SC.src} />
+      <!-- <img src={SF02.src} /> -->
+      <!-- <img src={SC.src} /> -->
+      <img src={dmpLocation1.src} />
     </div>
   </div>
   <div class="item-container" id="metro-marine">
