--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -2,6 +2,8 @@
 import barge from "../assets/barge.jpeg";
 import ddc from "../assets/DDC.jpg";
 import dmpLocation1 from "../assets/dmpLocation1.png";
+import dmpLocation2 from "../assets/dmpLocation2.png";
+import dmpLocation3 from "../assets/dmpLocation3.png";
 // import SF01 from "../assets/SF01.png";
 // import SF02 from "../assets/SF02.png";
 // import SN from "../assets/SN.png";
@@ -42,6 +44,8 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
       <!-- <img src={SF02.src} /> -->
       <!-- <img src={SC.src} /> -->
       <img src={dmpLocation1.src} />
+      <img src={dmpLocation2.src} />
+      <img src={dmpLocation3.src} />
     </div>
   </div>
   <div class="item-container" id="metro-marine">
