timeline box shadow and fixing CH5 Spring 2023 image

--- a/src/components/WorkTimeline.astro
+++ b/src/components/WorkTimeline.astro
@@ -370,11 +370,14 @@ import CoOpTechSVG from "./CoOpTechSVG.astro";
     width: 10px;
     /* height: auto; */
     position: absolute;
-    height: 100%;
-    top: 0;
+    /* height: 100%; */
+    /* top: 0; */
     left: 50%;
     transform: translateX(-50%);
     border-radius: 20px;
+    height: 99%;
+    top: 0.5%;
+    box-shadow: 0px 0px 10px 1px #deb887c5;
   }
   .item {
     position: relative;
