--- a/src/components/CFFG_ITAG_CH5.astro
+++ b/src/components/CFFG_ITAG_CH5.astro
@@ -212,8 +212,8 @@
 <style>
   svg {
     width: auto;
-    height: fit-content;
     max-width: 100%;
     max-height: 100%;
+    height: auto;
   }
 </style>
